fix model binary classification

--- a/notebooks/hate_speech_model_training.ipynb
+++ b/notebooks/hate_speech_model_training.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "52adee44",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "id": "4e8c1298",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "4  !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,15 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8fcd986c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "id": "d4fadb4e",
    "metadata": {},
    "outputs": [
@@ -205,13 +197,13 @@
       "\n",
       "🎯 Binary Classification:\n",
       "binary_class\n",
-      "1    23353\n",
-      "0     1430\n",
+      "1    20620\n",
+      "0     4163\n",
       "Name: count, dtype: int64\n",
       "\n",
-      "Foul tweets: 23353\n",
-      "Proper tweets: 1430\n",
-      "Balance ratio: 0.942\n",
+      "Foul tweets: 20620\n",
+      "Proper tweets: 4163\n",
+      "Balance ratio: 0.832\n",
       "\n",
       "✅ Final check - NaN values: 0\n"
      ]
@@ -234,7 +226,7 @@
     "# Create binary classification based on numeric labels\n",
     "# Based on the dataset description: 0=neither, 1=hate_speech, 2=offensive_language\n",
     "# We want: 1 for hate/offensive (classes 1,2), 0 for neither (class 0)\n",
-    "df['binary_class'] = df['class'].map({0: 0, 1: 1, 2: 1})\n",
+    "df['binary_class'] = df['class'].map({0: 1, 1: 1, 2: 0})\n",
     "\n",
     "# Check for NaN values after mapping\n",
     "print(f\"\\n❌ NaN values in binary_class: {df['binary_class'].isna().sum()}\")\n",
@@ -257,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "id": "6ecb3c6e",
    "metadata": {},
    "outputs": [
@@ -271,19 +263,19 @@
       "📊 Dataset shape after cleaning: (24783, 7)\n",
       "📊 Binary class distribution:\n",
       "binary_class\n",
-      "1    23353\n",
-      "0     1430\n",
+      "1    20620\n",
+      "0     4163\n",
       "Name: count, dtype: int64\n",
       "\n",
       "🚨 Foul Tweets (found 3):\n",
-      "1. !!! RT @mayasolovely: As a woman you shouldn't complain about cleaning up your house. &amp; as a man you should always take the trash out...\n",
-      "2. !!!!! RT @mleew17: boy dats cold...tyga dwn bad for cuffin dat hoe in the 1st place!!\n",
-      "3. !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby4life: You ever fuck a bitch and she start to cry? You be confused as shit\n",
+      "1. !!!!! RT @mleew17: boy dats cold...tyga dwn bad for cuffin dat hoe in the 1st place!!\n",
+      "2. !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby4life: You ever fuck a bitch and she start to cry? You be confused as shit\n",
+      "3. !!!!!!!!! RT @C_G_Anderson: @viva_based she look like a tranny\n",
       "\n",
       "✅ Proper Tweets (found 3):\n",
-      "1. \"@Blackman38Tide: @WhaleLookyHere @HowdyDowdy11 queer\" gaywad\n",
-      "2. \"@CB_Baby24: @white_thunduh alsarabsss\" hes a beaner smh you can tell hes a mexican\n",
-      "3. \"@DevilGrimz: @VigxRArts you're fucking gay, blacklisted hoe\" Holding out for #TehGodClan anyway http://t.co/xUCcwoetmn\n"
+      "1. !!! RT @mayasolovely: As a woman you shouldn't complain about cleaning up your house. &amp; as a man you should always take the trash out...\n",
+      "2. \" momma said no pussy cats inside my doghouse \"\n",
+      "3. \"@Addicted2Guys: -SimplyAddictedToGuys http://t.co/1jL4hi8ZMF\" woof woof hot scally lad\n"
      ]
     }
    ],
@@ -329,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "id": "07072e5d",
    "metadata": {},
    "outputs": [
@@ -342,8 +334,8 @@
       "================================================================================\n",
       "Training set size: 19826\n",
       "Test set size: 4957\n",
-      "Training balance: 0.942\n",
-      "Test balance: 0.942\n"
+      "Training balance: 0.832\n",
+      "Test balance: 0.832\n"
      ]
     }
    ],
@@ -378,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "id": "27120541",
    "metadata": {},
    "outputs": [
@@ -389,23 +381,23 @@
       "\n",
       "=== BOW_UNIGRAMS ===\n",
       "Feature matrix shape: (19826, 10000)\n",
-      "Logistic Regression - Accuracy: 0.9425, Precision: 0.9522, Recall: 0.9887, F1: 0.9701\n",
+      "Logistic Regression - Accuracy: 0.9595, Precision: 0.9778, Recall: 0.9733, F1: 0.9756\n",
       "\n",
       "=== BOW_BIGRAMS ===\n",
       "Feature matrix shape: (19826, 10000)\n",
-      "Logistic Regression - Accuracy: 0.9421, Precision: 0.9533, Recall: 0.9869, F1: 0.9698\n",
+      "Logistic Regression - Accuracy: 0.9617, Precision: 0.9805, Recall: 0.9733, F1: 0.9769\n",
       "\n",
       "=== TFIDF_UNIGRAMS ===\n",
       "Feature matrix shape: (19826, 10000)\n",
-      "Logistic Regression - Accuracy: 0.9431, Precision: 0.9476, Recall: 0.9946, F1: 0.9705\n",
+      "Logistic Regression - Accuracy: 0.9451, Precision: 0.9534, Recall: 0.9821, F1: 0.9675\n",
       "\n",
       "=== TFIDF_BIGRAMS ===\n",
       "Feature matrix shape: (19826, 10000)\n",
-      "Logistic Regression - Accuracy: 0.9419, Precision: 0.9475, Recall: 0.9934, F1: 0.9699\n",
+      "Logistic Regression - Accuracy: 0.9435, Precision: 0.9514, Recall: 0.9823, F1: 0.9666\n",
       "\n",
       "🏆 SELECTED VECTORIZER: tfidf_bigrams\n",
-      "   F1-Score: 0.9699\n",
-      "   Accuracy: 0.9419\n"
+      "   F1-Score: 0.9666\n",
+      "   Accuracy: 0.9435\n"
      ]
     }
    ],
@@ -493,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "id": "aa0c221b",
    "metadata": {},
    "outputs": [
@@ -509,29 +501,29 @@
       "------------------------------------------------------------\n",
       "\n",
       "🔄 Training Logistic Regression...\n",
-      "✅ Logistic Regression - Accuracy: 0.9419, F1: 0.9699, ROC-AUC: 0.8695\n",
+      "✅ Logistic Regression - Accuracy: 0.9435, F1: 0.9666, ROC-AUC: 0.9824\n",
       "\n",
       "🔄 Training SVM Linear...\n",
-      "✅ SVM Linear - Accuracy: 0.9431, F1: 0.9704, ROC-AUC: 0.8293\n",
+      "✅ SVM Linear - Accuracy: 0.9580, F1: 0.9747, ROC-AUC: 0.9822\n",
       "\n",
       "🔄 Training SVM RBF...\n",
-      "✅ SVM RBF - Accuracy: 0.9421, F1: 0.9700, ROC-AUC: 0.8463\n",
+      "✅ SVM RBF - Accuracy: 0.9538, F1: 0.9723, ROC-AUC: 0.9808\n",
       "\n",
       "🔄 Training Naive Bayes...\n",
-      "✅ Naive Bayes - Accuracy: 0.9423, F1: 0.9703, ROC-AUC: 0.7743\n",
+      "✅ Naive Bayes - Accuracy: 0.8951, F1: 0.9403, ROC-AUC: 0.9667\n",
       "\n",
       "================================================================================\n",
       "📊 FAIR COMPARISON RESULTS\n",
       "================================================================================\n",
       "                     Accuracy  Precision  Recall  F1-Score  ROC-AUC  PR-AUC\n",
-      "Logistic Regression    0.9419     0.9475  0.9934    0.9699   0.8695  0.9879\n",
-      "SVM Linear             0.9431     0.9511  0.9906    0.9704   0.8293  0.9838\n",
-      "SVM RBF                0.9421     0.9486  0.9923    0.9700   0.8463  0.9853\n",
-      "Naive Bayes            0.9423     0.9423  1.0000    0.9703   0.7743  0.9777\n",
+      "Logistic Regression    0.9435     0.9514  0.9823    0.9666   0.9824  0.9964\n",
+      "SVM Linear             0.9580     0.9780  0.9714    0.9747   0.9822  0.9962\n",
+      "SVM RBF                0.9538     0.9689  0.9758    0.9723   0.9808  0.9959\n",
+      "Naive Bayes            0.8951     0.8934  0.9922    0.9403   0.9667  0.9927\n",
       "\n",
       "🏆 BEST MODEL FOR OPTIMIZATION: SVM Linear\n",
-      "   F1-Score: 0.9704\n",
-      "   Accuracy: 0.9431\n"
+      "   F1-Score: 0.9747\n",
+      "   Accuracy: 0.9580\n"
      ]
     }
    ],
@@ -626,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "id": "d28d01e7",
    "metadata": {},
    "outputs": [
@@ -642,32 +634,32 @@
       "--------------------------------------------------\n",
       "\n",
       "=== Logistic Regression ===\n",
-      "Accuracy: 0.9419\n",
-      "Precision: 0.9475\n",
-      "Recall: 0.9934\n",
-      "F1-Score: 0.9699\n",
-      "ROC-AUC: 0.8695\n",
+      "Accuracy: 0.9435\n",
+      "Precision: 0.9514\n",
+      "Recall: 0.9823\n",
+      "F1-Score: 0.9666\n",
+      "ROC-AUC: 0.9824\n",
       "\n",
       "=== SVM Linear ===\n",
-      "Accuracy: 0.9431\n",
-      "Precision: 0.9511\n",
-      "Recall: 0.9906\n",
-      "F1-Score: 0.9704\n",
-      "ROC-AUC: 0.8293\n",
+      "Accuracy: 0.9580\n",
+      "Precision: 0.9780\n",
+      "Recall: 0.9714\n",
+      "F1-Score: 0.9747\n",
+      "ROC-AUC: 0.9822\n",
       "\n",
       "=== SVM RBF ===\n",
-      "Accuracy: 0.9421\n",
-      "Precision: 0.9486\n",
-      "Recall: 0.9923\n",
-      "F1-Score: 0.9700\n",
-      "ROC-AUC: 0.8463\n",
+      "Accuracy: 0.9538\n",
+      "Precision: 0.9689\n",
+      "Recall: 0.9758\n",
+      "F1-Score: 0.9723\n",
+      "ROC-AUC: 0.9808\n",
       "\n",
       "=== Naive Bayes ===\n",
-      "Accuracy: 0.9423\n",
-      "Precision: 0.9423\n",
-      "Recall: 1.0000\n",
-      "F1-Score: 0.9703\n",
-      "ROC-AUC: 0.7743\n",
+      "Accuracy: 0.8951\n",
+      "Precision: 0.8934\n",
+      "Recall: 0.9922\n",
+      "F1-Score: 0.9403\n",
+      "ROC-AUC: 0.9667\n",
       "\n",
       "================================================================================\n",
       "🤔 WHICH MODEL DO YOU WANT TO OPTIMIZE?\n",
@@ -679,16 +671,16 @@
       "3. SVM RBF\n",
       "4. Naive Bayes\n",
       "\n",
-      "💡 RECOMMENDATION: SVM Linear (Best F1-Score: 0.9704)\n",
+      "💡 RECOMMENDATION: SVM Linear (Best F1-Score: 0.9747)\n",
       "\n",
-      "✅ SELECTED MODEL FOR OPTIMIZATION: SVM Linear\n",
+      "✅ SELECTED MODEL FOR OPTIMIZATION: Logistic Regression\n",
       "\n",
       "📈 Selected Model Performance (Before Optimization):\n",
-      "Accuracy: 0.9431\n",
-      "Precision: 0.9511\n",
-      "Recall: 0.9906\n",
-      "F1-Score: 0.9704\n",
-      "ROC-AUC: 0.8293\n",
+      "Accuracy: 0.9435\n",
+      "Precision: 0.9514\n",
+      "Recall: 0.9823\n",
+      "F1-Score: 0.9666\n",
+      "ROC-AUC: 0.9824\n",
       "\n",
       "🎯 Model selected! Now we'll optimize it with Grid Search...\n"
      ]
@@ -727,7 +719,7 @@
     "print(f\"\\n💡 RECOMMENDATION: {best_model_name} (Best F1-Score: {fair_results[best_model_name]['f1']:.4f})\")\n",
     "\n",
     "# For now, let's set it to the best model (you can change this)\n",
-    "SELECTED_MODEL = \"SVM Linear\"  # Change this to your preferred model\n",
+    "SELECTED_MODEL = \"Logistic Regression\"  # Change this to your preferred model\n",
     "\n",
     "print(f\"\\n✅ SELECTED MODEL FOR OPTIMIZATION: {SELECTED_MODEL}\")\n",
     "\n",
@@ -755,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "id": "a7c2beec",
    "metadata": {},
    "outputs": [
@@ -766,28 +758,52 @@
       "================================================================================\n",
       "🔧 GRID SEARCH OPTIMIZATION\n",
       "================================================================================\n",
-      "🎯 Optimizing: SVM Linear\n",
-      "📋 Parameter grid: {'C': [0.1, 1, 10, 100], 'gamma': ['scale', 'auto']}\n",
+      "🎯 Optimizing: Logistic Regression\n",
+      "📋 Parameter grid: {'C': [0.1, 1, 10, 100], 'penalty': ['l1', 'l2'], 'solver': ['liblinear', 'saga']}\n",
       "\n",
       "🔄 Starting grid search optimization...\n",
-      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n",
+      "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hassantahir/Library/Python/3.9/lib/python/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/Users/hassantahir/Library/Python/3.9/lib/python/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/Users/hassantahir/Library/Python/3.9/lib/python/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/Users/hassantahir/Library/Python/3.9/lib/python/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/Users/hassantahir/Library/Python/3.9/lib/python/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/Users/hassantahir/Library/Python/3.9/lib/python/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "✅ Grid search completed!\n",
-      "Best parameters: {'C': 1, 'gamma': 'scale'}\n",
-      "Best cross-validation F1 score: 0.9724\n",
+      "Best parameters: {'C': 1, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "Best cross-validation F1 score: 0.9740\n",
       "\n",
       "📊 OPTIMIZED MODEL PERFORMANCE:\n",
-      "Accuracy: 0.9431\n",
-      "Precision: 0.9511\n",
-      "Recall: 0.9906\n",
-      "F1-Score: 0.9704\n",
-      "ROC-AUC: 0.8293\n",
-      "PR-AUC: 0.9838\n",
+      "Accuracy: 0.9580\n",
+      "Precision: 0.9859\n",
+      "Recall: 0.9634\n",
+      "F1-Score: 0.9745\n",
+      "ROC-AUC: 0.9844\n",
+      "PR-AUC: 0.9967\n",
       "\n",
       "📈 IMPROVEMENT COMPARISON:\n",
-      "F1-Score: 0.9704 → 0.9704\n",
-      "Accuracy: 0.9431 → 0.9431\n",
-      "ROC-AUC: 0.8293 → 0.8293\n",
+      "F1-Score: 0.9666 → 0.9745\n",
+      "Accuracy: 0.9435 → 0.9580\n",
+      "ROC-AUC: 0.9824 → 0.9844\n",
       "\n",
       "🎉 Model optimization completed!\n"
      ]
@@ -892,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "id": "60839f56",
    "metadata": {},
    "outputs": [
@@ -903,11 +919,11 @@
       "================================================================================\n",
       "🎯 THRESHOLD OPTIMIZATION\n",
       "================================================================================\n",
-      "Using threshold: 0.3000\n",
-      "Precision at threshold 0.3000: 0.9482\n",
-      "Recall at threshold 0.3000: 0.9944\n",
-      "F1-Score at threshold 0.3000: 0.9707\n",
-      "Accuracy at threshold 0.3000: 0.9435\n",
+      "Using threshold: 0.4000\n",
+      "Precision at threshold 0.4000: 0.9773\n",
+      "Recall at threshold 0.4000: 0.9716\n",
+      "F1-Score at threshold 0.4000: 0.9745\n",
+      "Accuracy at threshold 0.4000: 0.9576\n",
       "\n",
       "🎯 Final optimized model ready for saving!\n"
      ]
@@ -920,7 +936,7 @@
     "print(\"=\" * 80)\n",
     "\n",
     "# Set optimal threshold to 0.3 for better sensitivity to offensive language\n",
-    "optimal_threshold = 0.3\n",
+    "optimal_threshold = 0.4\n",
     "\n",
     "print(f\"Using threshold: {optimal_threshold:.4f}\")\n",
     "\n",
@@ -961,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "id": "d41451fb",
    "metadata": {},
    "outputs": [
@@ -974,19 +990,19 @@
       "================================================================================\n",
       "✅ Optimized model saved successfully!\n",
       "📁 File: ../models/saved/hate_speech_model.pkl\n",
-      "🤖 Model: SVM Linear (Optimized)\n",
-      "📊 F1-Score: 0.9707\n",
-      "🎯 Accuracy: 0.9435\n",
-      "🎯 Threshold: 0.3\n",
+      "🤖 Model: Logistic Regression (Optimized)\n",
+      "📊 F1-Score: 0.9745\n",
+      "🎯 Accuracy: 0.9576\n",
+      "🎯 Threshold: 0.4\n",
       "\n",
       "📋 Model Components Saved:\n",
-      "• Trained Model: SVM Linear (Grid Search Optimized)\n",
+      "• Trained Model: Logistic Regression (Grid Search Optimized)\n",
       "• Vectorizer: TF-IDF with Bigrams\n",
-      "• Threshold: 0.3\n",
+      "• Threshold: 0.4\n",
       "• Performance Metrics: All evaluation scores\n",
-      "• Training Date: 2025-10-25 19:36:45\n",
-      "• Best Parameters: {'C': 1, 'gamma': 'scale'}\n",
-      "• CV Score: 0.9724\n",
+      "• Training Date: 2025-10-25 22:41:34\n",
+      "• Best Parameters: {'C': 1, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "• CV Score: 0.9740\n",
       "\n",
       "🚀 Ready to use in Flask API!\n",
       "📍 API will load model from: ../models/saved/hate_speech_model.pkl\n"
@@ -1054,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "8587d862",
    "metadata": {},
    "outputs": [
@@ -1066,31 +1082,33 @@
       "🧪 TESTING SAVED MODEL\n",
       "================================================================================\n",
       "✅ Model loaded successfully!\n",
-      "🤖 Model Type: SVM Linear\n",
-      "📊 Performance: F1=0.9707\n",
-      "🎯 Threshold: 0.3\n",
+      "📁 From: ../models/saved/hate_speech_model.pkl\n",
+      "🤖 Model Type: Logistic Regression\n",
+      "📊 Performance: F1=0.9745\n",
+      "🎯 Threshold: 0.4\n",
       "\n",
       "🔍 Testing with sample texts:\n",
       "----------------------------------------\n",
       "Text: This is a normal tweet about the weather...\n",
-      "Prediction: Foul (confidence: 0.980)\n",
-      "Probability: 0.980\n",
+      "Prediction: Proper (confidence: 0.650)\n",
+      "Probability: 0.350\n",
       "\n",
       "Text: You are such a stupid idiot...\n",
-      "Prediction: Foul (confidence: 0.736)\n",
-      "Probability: 0.736\n",
+      "Prediction: Foul (confidence: 0.570)\n",
+      "Probability: 0.430\n",
       "\n",
       "Text: I love this new movie, it's amazing!...\n",
-      "Prediction: Foul (confidence: 0.977)\n",
-      "Probability: 0.977\n",
+      "Prediction: Proper (confidence: 0.742)\n",
+      "Probability: 0.258\n",
       "\n",
       "Text: Go kill yourself you worthless piece of shit...\n",
-      "Prediction: Foul (confidence: 0.825)\n",
-      "Probability: 0.825\n",
+      "Prediction: Foul (confidence: 0.987)\n",
+      "Probability: 0.987\n",
       "\n",
       "🎉 Model is working correctly!\n",
       "\n",
-      "🚀 Ready to start Flask API!\n"
+      "🚀 Ready to start Flask API!\n",
+      "📍 API will load from: ../models/saved/hate_speech_model.pkl\n"
      ]
     }
    ],
